# VoiceFlow

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  MIGRATE-TO-TAURI-RUST.md  MIGRATION-FROZEN-ZONES.md  MIGRATION-TO-TAURI.md  QUICKSTART.md  README.md  TEST_INSTRUCTIONS.md  VoiceFlow-Installer.sed  VoiceFlow.iss  build.bat  create-installer.sed  create-release.bat  download-model.bat  download-whisper.bat  electron-builder.yml  index.html  notes.txt  package-lock.json  package.json  paste-keystroke.ps1  session-handoff.md  setup.bat  start-dev.bat  tsconfig.electron.json  vite.config.ts  vitest.config.ts  voiceflow.pfx
.pi/: AGENTS.md  settings.json
.pi/extensions/: voiceflow-autoload.ts
electron/: main.ts  preload.ts
electron/ipc/: dictation.ipc.ts  engine.ipc.ts  llm.ipc.ts  model.ipc.ts  settings.ipc.ts  snippet.ipc.ts
electron/modules/: adaptiveLearning.ts  audioConverter.ts  audioPreprocessor.ts  (+16 more)
scripts/: create-app-icon.js  create-tray-icon.js  create-tray-png.js  generate-ico.js  generate-tray-icon.js
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: converter.rs  mod.rs
src-tauri/src/commands/: app.rs  clipboard.rs  dictation.rs  dictionary.rs  gpu.rs  history.rs  learning.rs  llm.rs  log.rs  mod.rs  model.rs  settings.rs  snippet.rs  warmup.rs
src-tauri/src/db/: dictionary.rs  history.rs  learning.rs  mod.rs  settings.rs  snippets.rs
src-tauri/src/paste/: engine.rs  mod.rs
src-tauri/src/utils/: logger.rs
src-tauri/src/whisper/: mod.rs  transcriber.rs
(+78 files in other folders)
