[package]
name = "voiceflow"
version = "2.0.0"
description = "Local voice-to-text desktop app"
authors = ["VoiceFlow"]
edition = "2021"

[lib]
name = "voiceflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
anyhow = "1"
thiserror = "1"
walkdir = "2"
dirs = "5"
regex = "1"
similar = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
